# EcoFiServer

./: $null  .env  Dockerfile  README_FASTAPI.md  client.py  clienttt.py  fastapi_server.py  fastapi_server_booking.py  fastapi_server_fi.py  fastapi_stdio.py  main.py  pyproject.toml  requirements.txt  start_server.py  test_fastapi_client.py  universal_client.py
fi-money-frontend/: package-lock.json  package.json
fi-money-frontend/src/components/Dashboard/: ConnectionCard.js  QueryInterface.js  StatsCard.js  ToolsGrid.js
fi-money-frontend/src/components/Layout/: Navbar.js
fi-money-frontend/src/services/: api.js
